"Button custom" now support text object Fixed button alignment Added new upgrade

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,5 +1,6 @@
 button{
   cursor: pointer;
+  vertical-align: top;
 }
 
 #top-bar button{
